# upload-to-s3

./: .cirrus.yml  Cargo.toml  README.md
.builds/: arch.yml  debian.yml  freebsd.yml  openbsd.yml
src/: main.rs
