[package]
name = "upload-to-s3"
version = "0.2.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
getopts = "0.2.21"
tokio = { version = "1.19.2", features = ["fs", "rt", "macros"] }
tokio-util = { version = "0.7.3", features = ["io"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_credential = "0.48.0"
rusoto_s3 = { version = "0.48.0", default-features = false, features = ["rustls"] }
